--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">My Events</string>
+    <string name="type_your_notes_here">Type your notes here</string>
+    <string name="title">Title</string>
 </resources>
